# vimes-ironclaw

./: .editorconfig  .gitleaks.toml  .gitleaksignore  .gitmodules  .pre-commit-config.yaml  CODEOWNERS  Cargo.toml  Dockerfile  Dockerfile.reborn  Dockerfile.test  Dockerfile.worker
.forgejo/workflows/: homelab-build-check.yml  homelab-build.yml  upstream-sync.yml
.github/: CODEOWNERS  renovate.json5
.github/workflows/: claude-review.yml  code_style.yml  coverage.yml  docker.yml  e2e.yml  homelab-build.yml  homelab-shared-docs-bump.yml  homelab-upstream-sync.yml  labeler.yml  live-canary.yml  nearai-bench.yml  nightly-deep-ci.yml  nightly-e2e.yml  platform-and-compat.yml  pr-label-classify.yml  pr-label-scope.yml  reborn-e2e.yml  reborn-tests.yml  rebuild-release-image.yml  regression-test-check.yml  release-plz.yml  release.yml  replay-gate.yml  secret-scan.yml  staging-ci.yml  test.yml
channels-src/discord/: Cargo.toml
channels-src/feishu/: Cargo.toml
channels-src/slack/: Cargo.toml
channels-src/telegram/: Cargo.toml
channels-src/wechat/: Cargo.toml
channels-src/wecom/: Cargo.toml
channels-src/whatsapp/: Cargo.toml
crates/: Dockerfile.sandbox
crates/ironclaw_agent_loop/: Cargo.toml
crates/ironclaw_agent_loop/src/: executor.rs
crates/ironclaw_agent_loop/src/test_support/: mod.rs
crates/ironclaw_approvals/: Cargo.toml
crates/ironclaw_architecture/: Cargo.toml
crates/ironclaw_attachments/: Cargo.toml
crates/ironclaw_auth/: Cargo.toml
crates/ironclaw_authorization/: Cargo.toml
crates/ironclaw_capabilities/: Cargo.toml
crates/ironclaw_capabilities/src/: conformance.rs  lib.rs
crates/ironclaw_capabilities/tests/: capability_profile_conformance_contract.rs
crates/ironclaw_common/: Cargo.toml
crates/ironclaw_conversations/: Cargo.toml
crates/ironclaw_dispatcher/: Cargo.toml
crates/ironclaw_embeddings/: Cargo.toml
crates/ironclaw_engine/: Cargo.toml
crates/ironclaw_event_projections/: Cargo.toml
crates/ironclaw_event_streams/: Cargo.toml
crates/ironclaw_events/: Cargo.toml
crates/ironclaw_extensions/: Cargo.toml
crates/ironclaw_extractors/: Cargo.toml
crates/ironclaw_filesystem/: Cargo.toml
crates/ironclaw_first_party_extension_ports/: Cargo.toml
crates/ironclaw_first_party_extensions/: Cargo.toml
crates/ironclaw_first_party_extensions/assets/github/wasm-src/: Cargo.toml
crates/ironclaw_first_party_extensions/assets/google-docs/wasm-src/: Cargo.toml
crates/ironclaw_first_party_extensions/assets/google-drive/wasm-src/: Cargo.toml
crates/ironclaw_first_party_extensions/assets/google-sheets/wasm-src/: Cargo.toml
crates/ironclaw_first_party_extensions/assets/google-slides/wasm-src/: Cargo.toml
crates/ironclaw_gateway/: Cargo.toml
crates/ironclaw_gateway/static/: index.html
crates/ironclaw_hooks/: Cargo.toml
crates/ironclaw_hooks_libsql/: Cargo.toml
crates/ironclaw_hooks_parity/: Cargo.toml
crates/ironclaw_hooks_postgres/: Cargo.toml
crates/ironclaw_host_api/: Cargo.toml
crates/ironclaw_host_api/src/: host_port.rs
crates/ironclaw_host_api/tests/: host_api_contract.rs
crates/ironclaw_host_runtime/: Cargo.toml
crates/ironclaw_llm/: Cargo.toml
crates/ironclaw_loop_support/: Cargo.toml
crates/ironclaw_mcp/: Cargo.toml
crates/ironclaw_memory/: Cargo.toml
crates/ironclaw_memory_native/: Cargo.toml
crates/ironclaw_network/: Cargo.toml
crates/ironclaw_oauth/: Cargo.toml
crates/ironclaw_outbound/: Cargo.toml
crates/ironclaw_process_sandbox/: Cargo.toml
crates/ironclaw_processes/: Cargo.toml
crates/ironclaw_product_adapter_registry/: Cargo.toml
crates/ironclaw_product_adapters/: Cargo.toml
crates/ironclaw_product_workflow/: Cargo.toml
crates/ironclaw_product_workflow_storage/: Cargo.toml
crates/ironclaw_projects/: Cargo.toml
crates/ironclaw_prompt_envelope/: Cargo.toml
crates/ironclaw_reborn/: Cargo.toml
crates/ironclaw_reborn_cli/: Cargo.toml
crates/ironclaw_reborn_composition/: Cargo.toml
crates/ironclaw_reborn_config/: Cargo.toml
crates/ironclaw_reborn_event_store/: Cargo.toml
crates/ironclaw_reborn_identity/: Cargo.toml
crates/ironclaw_reborn_openai_compat/: Cargo.toml
crates/ironclaw_reborn_openai_compat_storage/: Cargo.toml
crates/ironclaw_reborn_traces/: Cargo.toml
crates/ironclaw_reborn_webui_ingress/: Cargo.toml
crates/ironclaw_resources/: Cargo.toml
crates/ironclaw_run_state/: Cargo.toml
crates/ironclaw_runtime_policy/: Cargo.toml
crates/ironclaw_safety/: Cargo.toml
crates/ironclaw_scripts/: Cargo.toml
crates/ironclaw_secrets/: Cargo.toml
crates/ironclaw_skill_learning/: Cargo.toml
crates/ironclaw_skills/: Cargo.toml
crates/ironclaw_slack_v2_adapter/: Cargo.toml
crates/ironclaw_telegram_v2_adapter/: Cargo.toml
crates/ironclaw_threads/: Cargo.toml
crates/ironclaw_triggers/: Cargo.toml
crates/ironclaw_trust/: Cargo.toml
crates/ironclaw_tui/: Cargo.toml
crates/ironclaw_turns/: Cargo.toml
crates/ironclaw_wasm/: Cargo.toml
crates/ironclaw_wasm_limiter/: Cargo.toml
crates/ironclaw_wasm_product_adapters/: Cargo.toml
crates/ironclaw_wasm_sandbox_core/: Cargo.toml
crates/ironclaw_webui_v2/: Cargo.toml
crates/ironclaw_webui_v2_static/: Cargo.toml
docker/: sandbox.Dockerfile
docs/architecture-video/: package-lock.json  package.json
docs/reborn/: agent-loop-skeleton.md
fuzz/: Cargo.toml
homelab/: CHANGELOG.md  Dockerfile  PATCHES.md  README.md
homelab/config/: SOUL.md  TOOLS.md  openclaw.json
homelab/k8s/: deployment.yaml  ingressroute.yaml  kustomization.yaml  pvc.yaml  rbac.yaml  service.yaml
infra/runner/: Dockerfile
src/: main.rs
src/agent/: agent_loop.rs  commands.rs  heartbeat.rs
src/bridge/: effect_adapter.rs
tests/: reborn_approval_traces_parity.rs  reborn_minimal_dispatch_parity.rs  support_unit_tests.rs
tools-src/composio/: Cargo.toml
tools-src/github/: Cargo.toml
tools-src/gmail/: Cargo.toml
tools-src/google-calendar/: Cargo.toml
tools-src/google-docs/: Cargo.toml
tools-src/google-drive/: Cargo.toml
tools-src/google-sheets/: Cargo.toml
tools-src/llm-context/: Cargo.toml
(+46 files in other folders)
