[package]
name = "slack-channel"
version = "0.2.1"
edition = "2021"
description = "Slack Events API channel for IronClaw"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WIT bindgen for WASM component model
wit-bindgen = "0.57.1"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# HMAC for signature validation
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"

[profile.release]
# Optimize for size
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
