[package]
name = "wechat-channel"
version = "0.1.0"
edition = "2021"
description = "WeChat iLink Bot channel for IronClaw"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.57.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22.1"
aes = "0.9.0"
cipher = "0.5.1"
md-5 = "0.11.0"
rand = "0.10.1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
