[package]
name = "whatsapp-channel"
version = "0.2.0"
edition = "2021"
description = "WhatsApp Cloud API channel for IronClaw"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.58.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[profile.release]
opt-level = "s"
lto = true
strip = true

[workspace]
