[package]
name = "ironclaw_agent_loop"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Agent-loop framework state and strategy contracts for IronClaw Reborn"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[features]
default = []
test-support = []

[dependencies]
async-trait = "0.1.89"
blake3 = "1.8.5"
ironclaw_common = { path = "../ironclaw_common", version = "0.4.2" }
ironclaw_host_api = { path = "../ironclaw_host_api", version = "0.1.0" }
ironclaw_turns = { path = "../ironclaw_turns", version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_jcs = "0.2"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "time"] }
tracing = "0.1.44"

[dev-dependencies]
chrono = "0.4.45"
futures = "0.3.32"
ironclaw_agent_loop = { path = ".", features = ["test-support"] }
tokio = { version = "1.52.3", features = ["macros", "rt"] }
