[package]
name = "ironclaw_approvals"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ironclaw_authorization = { path = "../ironclaw_authorization" }
ironclaw_events = { path = "../ironclaw_events" }
ironclaw_host_api = { path = "../ironclaw_host_api" }
ironclaw_run_state = { path = "../ironclaw_run_state" }
thiserror = "2.0.18"

[dev-dependencies]
async-trait = "0.1.89"
ironclaw_filesystem = { path = "../ironclaw_filesystem" }
serde_json = "1.0.149"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["macros", "rt"] }
