[package]
name = "ironclaw_embeddings"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Embedding-provider trait and implementations (OpenAI, NearAI, Ollama, AWS Bedrock) with LRU caching"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[package.metadata.dist]
dist = false

[features]
default = []
bedrock = ["dep:aws-config", "dep:aws-sdk-bedrockruntime", "dep:aws-smithy-types"]
# Exposes `MockEmbeddings` for downstream test harnesses. Off in release
# builds so the deterministic-hash mock can't be reached from production
# code paths.
testing = []

[dependencies]
ironclaw_llm = { path = "../ironclaw_llm", version = "0.1.0" }

async-trait = "0.1.89"
lru = "0.18.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls-tls-native-roots"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tracing = "0.1.44"

aws-config             = { version = "1.8.18", features = ["behavior-version-latest"], optional = true }
aws-sdk-bedrockruntime = { version = "1.135.0", default-features = false, features = ["default-https-client", "rt-tokio", "behavior-version-latest"], optional = true }
aws-smithy-types       = { version = "1.5.0", optional = true }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["full", "test-util"] }
