[package]
name = "ironclaw_engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Unified thread-capability-CodeAct execution engine for IronClaw"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[package.metadata.dist]
dist = false

[dependencies]
async-trait = "0.1.89"
cron = "0.16.0"
ironclaw_common = { path = "../ironclaw_common", version = "0.4.2" }
ironclaw_skills = { path = "../ironclaw_skills", version = "0.3.0", default-features = false }
chrono = { version = "0.4.44", features = ["serde"] }
monty = { git = "https://github.com/pydantic/monty.git", tag = "v0.0.17" }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["sync", "time", "macros", "rt"] }
tracing = "0.1.44"
uuid = { version = "1.23.1", features = ["v4", "v5", "serde"] }
sha2 = "0.11.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["full", "test-util"] }
