[package]
name = "ironclaw_event_streams"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Transport-neutral Reborn projection stream manager"
publish = false

[dependencies]
async-trait = "0.1.89"
ironclaw_event_projections = { path = "../ironclaw_event_projections" }
ironclaw_host_api = { path = "../ironclaw_host_api" }
ironclaw_outbound = { path = "../ironclaw_outbound" }
ironclaw_turns = { path = "../ironclaw_turns" }
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "sync", "rt"] }

[dev-dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
ironclaw_events = { path = "../ironclaw_events" }
tokio = { version = "1.52.3", features = ["macros", "rt", "time"] }
