[package]
name = "ironclaw_events"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
ironclaw_host_api = { path = "../ironclaw_host_api" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt"] }
