[package]
name = "ironclaw_extensions"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Extension manifest and registry contracts for IronClaw Reborn"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.45", features = ["serde"] }
ironclaw_filesystem = { path = "../ironclaw_filesystem", version = "0.1.0" }
ironclaw_host_api = { path = "../ironclaw_host_api", version = "0.1.0" }
ironclaw_trust = { path = "../ironclaw_trust", version = "0.1.0" }
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["sync"] }
toml = "0.9.12"
url = "2.5.8"

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["macros", "rt"] }
