[package]
name = "ironclaw_filesystem"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Scoped filesystem service for IronClaw Reborn"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[features]
default = []
postgres = ["dep:deadpool-postgres", "dep:tokio-postgres"]
libsql = ["dep:libsql"]

[dependencies]
async-trait = "0.1.89"
blake3 = "1.8.5"
deadpool-postgres = { version = "0.14.1", optional = true }
ironclaw_host_api = { path = "../ironclaw_host_api", version = "0.1.0" }
ironclaw_safety = { path = "../ironclaw_safety", version = "0.2.2" }
libsql = { version = "0.9.30", optional = true, default-features = false, features = ["core", "replication", "remote", "tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs", "io-util", "sync", "time"] }
tokio-postgres = { version = "0.7.18", optional = true, features = ["with-serde_json-1"] }
tracing = "0.1.44"

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["macros", "rt"] }
tracing-test = { version = "0.2.6", features = ["no-env-filter"] }
uuid = { version = "1.23.4", features = ["v4"] }
