[package]
name = "ironclaw_host_api"
version = "0.1.0"
edition = "2024"
# Keep in sync with the workspace-level package.rust-version.
rust-version = "1.92"
description = "Shared host API contracts for IronClaw Reborn"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
rust_decimal = { version = "1.42.0", features = ["serde", "serde-with-str"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[dev-dependencies]
rust_decimal_macros = "1.40.0"
static_assertions = "1.1.0"
