[package]
name = "ironclaw_llm"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Multi-provider LLM integration with retry, failover, circuit breaker, and response caching"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[package.metadata.dist]
dist = false

[features]
default = []
bedrock = ["dep:aws-config", "dep:aws-sdk-bedrockruntime", "dep:aws-smithy-types"]
# Opt-in StubLlm + credentials helpers for downstream test code.
testing = []

[dependencies]
ironclaw_common = { path = "../ironclaw_common", version = "0.4.2" }
ironclaw_safety = { path = "../ironclaw_safety", version = "0.2.2" }

async-trait = "0.1.89"
anyhow = "1.0.102"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6"
eventsource-stream = "0.2.3"
futures = "0.3.32"
open = "5.3.5"
rand = "0.10.1"
urlencoding = "2.1.3"
regex = "1.12.3"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "multipart", "rustls-tls-native-roots", "stream"] }
rig-core = { version = "0.37.0", default-features = false, features = ["reqwest-rustls"] }
rust_decimal = { version = "1.42.0", features = ["serde", "serde-with-str", "maths"] }
rust_decimal_macros = "1.40.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["sync", "io-util", "io-std", "time", "macros", "rt", "fs", "process", "net"] }
tracing = "0.1.44"
url = "2.5.8"
uuid = { version = "1.23.1", features = ["v4", "serde"] }

aws-config             = { version = "1.8.16", features = ["behavior-version-latest"], optional = true }
aws-sdk-bedrockruntime = { version = "1.130.0", optional = true }
aws-smithy-types       = { version = "1.4.7", optional = true }

[dev-dependencies]
insta = { version = "1.47.2", features = ["yaml"] }
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["full", "test-util"] }
tracing-test = "0.2.6"
