[package]
name = "ironclaw_loop_support"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Loop support services for IronClaw Reborn AgentLoopHost implementations"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.45", features = ["serde"] }
dashmap = "6.2.1"
futures = "0.3.32"
hex = "0.4.3"
jsonschema = { version = "0.46.6", default-features = false }
parking_lot = "0.12.5"
tracing = "0.1.44"
tokio = { version = "1.52.3", features = ["rt", "sync", "time"] }
ironclaw_host_api = { path = "../ironclaw_host_api", version = "0.1.0" }
ironclaw_host_runtime = { path = "../ironclaw_host_runtime", version = "0.1.0" }
ironclaw_process_sandbox = { path = "../ironclaw_process_sandbox", version = "0.1.0" }
ironclaw_filesystem = { path = "../ironclaw_filesystem", version = "0.1.0" }
ironclaw_resources = { path = "../ironclaw_resources", version = "0.1.0" }
ironclaw_safety = { path = "../ironclaw_safety", version = "0.2.2" }
ironclaw_skills = { path = "../ironclaw_skills", version = "0.3.0", default-features = false }
ironclaw_memory = { path = "../ironclaw_memory", version = "0.1.0" }
ironclaw_threads = { path = "../ironclaw_threads", version = "0.1.0" }
ironclaw_turns = { path = "../ironclaw_turns", version = "0.1.0" }
rust_decimal = { version = "1.42.1", features = ["serde", "serde-with-str"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
uuid = { version = "1.23.4", features = ["v5"] }

[dev-dependencies]
ironclaw_threads = { path = "../ironclaw_threads", version = "0.1.0", features = ["test-support"] }
ironclaw_trust = { path = "../ironclaw_trust", version = "0.1.0" }
rust_decimal_macros = "1.40.0"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["macros", "rt"] }
tracing-test = { version = "0.2.6", features = ["no-env-filter"] }
