[package]
name = "ironclaw_network"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1.89"
ironclaw_host_api = { path = "../ironclaw_host_api" }
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "rustls-tls-native-roots"] }
thiserror = "2.0.18"
url = "2.5.8"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt"] }
