[package]
name = "ironclaw_network"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1.89"
ironclaw_host_api = { path = "../ironclaw_host_api" }
percent-encoding = "2.3.2"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls-tls-native-roots"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt"] }
url = "2.5.8"
zeroize = "1.9.0"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt", "time"] }
