[package]
name = "ironclaw_outbound"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Outbound egress and projection subscription policy storage for IronClaw Reborn"
publish = false

[features]
default = []
libsql = ["dep:libsql"]
postgres = ["dep:deadpool-postgres", "dep:tokio-postgres"]

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
deadpool-postgres = { version = "0.14.1", optional = true }
hex = "0.4.3"
ironclaw_event_projections = { path = "../ironclaw_event_projections" }
ironclaw_filesystem = { path = "../ironclaw_filesystem" }
ironclaw_host_api = { path = "../ironclaw_host_api" }
ironclaw_turns = { path = "../ironclaw_turns" }
libsql = { version = "0.9.30", optional = true, default-features = false, features = ["core", "replication", "remote", "tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio-postgres = { version = "0.7.18", optional = true }
tracing = "0.1.44"
uuid = { version = "1.23.4", features = ["v4", "serde"] }

[dev-dependencies]
ironclaw_events = { path = "../ironclaw_events" }
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["macros", "rt", "rt-multi-thread", "sync"] }
