[package]
name = "ironclaw_process_sandbox"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1.89"
ironclaw_host_api = { path = "../ironclaw_host_api" }
ironclaw_processes = { path = "../ironclaw_processes" }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["io-util", "macros", "process", "time"] }

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["macros", "rt", "time"] }
