[package]
name = "ironclaw_product_adapter_registry"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "ProductAdapter host-api projection for IronClaw Reborn extension manifests"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[dependencies]
ironclaw_extensions = { path = "../ironclaw_extensions", version = "0.1.0" }
ironclaw_host_api = { path = "../ironclaw_host_api", version = "0.1.0" }
ironclaw_product_adapters = { path = "../ironclaw_product_adapters", version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "0.9.12"

[dev-dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt", "sync"] }
