[package]
name = "ironclaw_projects"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "First-class Project entity, membership, and access control for IronClaw Reborn"
publish = false

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.45", features = ["serde"] }
ironclaw_filesystem = { path = "../ironclaw_filesystem" }
ironclaw_host_api = { path = "../ironclaw_host_api" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tracing = "0.1.44"
ulid = { version = "1.2.1", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt"] }
